clusters/cosmos/infra/cockroachdb/service.public.yaml
---
# Source: cockroachdb/templates/service.public.yaml
# This Service is meant to be used by clients of the database.
# It exposes a ClusterIP that will automatically load balance connections
# to the different database Pods.
kind: Service
apiVersion: v1
metadata:
  name: cockroachdb-public
  namespace: "cockroachdb"
  annotations:
    external-dns.alpha.kubernetes.io/hostname: cockroachdb.cosmos.cboxlab.com
spec: {}
