clusters/cosmos/infra/cockroachdb/ingress.yaml
---
# Source: cockroachdb/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cockroachdb-ingress
  namespace: cockroachdb
spec:
  rules:
    - host: cockroachdb-console.cosmos.cboxlab.com
      http:
        paths:
          - path: "/"
            backend:
              serviceName: cockroachdb-public
              servicePort: "http"
  tls:
    - hosts:
      - cockroachdb-console.cosmos.cboxlab.com
      secretName: cockroachdb-tls
